k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civil-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: civil-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: civil-web
            port:
              number: 80
